--- a/index.html
+++ b/index.html
@@ -51,13 +51,45 @@ wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
-wallTex.repeat.set(2, 3); // Tiling for the wall texture
-floorTex.repeat.set(8, 8); // Tiling for the floor texture
-ceilTex.repeat.set(2, 2); // Tiling for the ceiling texture
+function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
+  return new THREE.ShaderMaterial({
+    uniforms: {
+      tex: { value: tex },
+      rMult: { value: r },
+      gMult: { value: g },
+      bMult: { value: b },
+      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+    },
+    vertexShader: `
+      varying vec2 vUv;
+      uniform vec2 repeat;
+      void main() {
+        vUv = uv * repeat;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+      }
+    `,
+    fragmentShader: `
+      uniform sampler2D tex;
+      uniform float rMult;
+      uniform float gMult;
+      uniform float bMult;
+      varying vec2 vUv;
+      void main() {
+        vec4 color = texture2D(tex, vUv);
+        color.r *= rMult;
+        color.g *= gMult;
+        color.b *= bMult;
+        gl_FragColor = color;
+      }
+    `,
+    side: THREE.DoubleSide
+  });
+}
 
-const wallMat = new THREE.MeshBasicMaterial({ map: wallTex });
-const floorMat = new THREE.MeshBasicMaterial({ map: floorTex });
-const ceilMat = new THREE.MeshBasicMaterial({ map: ceilTex });
+const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
+const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
+const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
+ceilMat.side = THREE.DoubleSide;
 
 const collisionBoxes = [];
 function createWall(w, h, d, x, y, z, material) {
